tests/rosetta/out/Erlang/100-doors.erl
#!/usr/bin/env escript
% Generated by Mochi compiler v0.10.26 on 2025-07-16T09:34:05Z
% 100-doors.erl - generated from 100-doors.mochi

main(_) ->
    Doors0 = [],
    {Doors1} = lists:foldl(fun(I, {Doors}) -> Doors1 = Doors ++ [false], {Doors1} end, {Doors0}, lists:seq(0, (100)-1)),
    lists:foreach(fun(Pass) -> Idx0 = (Pass - 1), (fun Loop0(Doors, Idx) -> case (Idx < 100) of true -> Doors2 = lists:sublist(Doors, Idx) ++ [not lists:nth((Idx)+1, Doors)] ++ lists:nthtail((Idx)+1, Doors), Idx1 = (Idx + Pass), Loop0(Doors2, Idx1); _ -> ok end end(Doors1, Idx0)) end, lists:seq(1, (101)-1)),
    lists:foreach(fun(Row) -> Line0 = "", lists:foreach(fun(Col) -> Idx = ((Row * 10) + Col), (case lists:nth((Idx)+1, Doors2) of undefined -> Line2 = Line1 ++ "0"; false -> Line2 = Line1 ++ "0"; _ -> Line1 = Line0 ++ "1" end), (case (Col < 9) of true -> Line3 = Line2 ++ " "; _ -> ok end) end, lists:seq(0, (10)-1)), io:format("~p~n", [Line3]) end, lists:seq(0, (10)-1)).
